--- a/Client/package.json
+++ b/Client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
@@ -21,8 +22,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
-    "@reduxjs/toolkit": "^1.9.7"
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
