--- a/Client/package.json
+++ b/Client/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
+    "recharts": "^2.9.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2"
   },
