--- a/Client/package.json
+++ b/Client/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.17.0",
     "recharts": "^2.9.0",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
