--- a/Client/.env
+++ b/Client/.env
@@ -1,2 +1,3 @@
 
-PUBLIC_KEY = TEST-50156f30-252b-4623-bbba-ed453620d49f
+VITE_PUBLIC_KEY=TEST-50156f30-252b-4623-bbba-ed453620d49f
+VITE_API_BASE=https://connectifyback-dp-production.up.railway.app
