--- a/Client/package.json
+++ b/Client/package.json
@@ -27,7 +27,8 @@
     "recharts": "^2.9.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "styled-components": "^6.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
