--- a/Client/package.json
+++ b/Client/package.json
@@ -23,14 +23,18 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-particles": "^2.12.2",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
+    "react-tsparticles": "^2.12.2",
     "recharts": "^2.9.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "socket.io-client": "^4.7.2",
-    "styled-components": "^6.1.0"
+    "styled-components": "^6.1.0",
+    "tsparticles": "^2.12.0",
+    "tsparticles-engine": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
