--- a/Client/package.json
+++ b/Client/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mercadopago/sdk-react": "^0.0.3",
+    "@minchat/react-chat-ui": "^0.10.3",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.14",
     "@reduxjs/toolkit": "^1.9.7",
@@ -23,7 +24,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "react-particles": "^2.12.2",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-tsparticles": "^2.12.2",
